--- a/meteor/neworder/package.json
+++ b/meteor/neworder/package.json
@@ -10,7 +10,10 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "bootstrap": "^4.1.3",
+    "jquery": "^3.3.1",
     "meteor-node-stubs": "^0.4.1",
+    "moment": "^2.22.2",
+    "packery": "^2.1.2",
     "popper": "^1.0.1"
   },
   "meteor": {
