--- a/meteor/neworder/package.json
+++ b/meteor/neworder/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@babel/runtime": "^7.0.0",
     "bootstrap": "^4.1.3",
+    "draggabilly": "^2.2.0",
     "jquery": "^3.3.1",
     "meteor-node-stubs": "^0.4.1",
     "moment": "^2.22.2",
