--- a/mern/neworder/package.json
+++ b/mern/neworder/package.json
@@ -4,8 +4,12 @@
   "private": true,
   "dependencies": {
     "bootstrap": "^4.1.3",
+    "draggabilly": "^2.2.0",
+    "packery": "^2.1.2",
+    "papaparse": "^4.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-packery-component": "^1.0.2",
     "react-scripts": "2.1.1",
     "reactstrap": "^6.5.0"
   },
