--- a/react/neworder/package.json
+++ b/react/neworder/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "draggabilly": "^2.2.0",
+    "isotope": "^1.0.0-alpha.3",
     "packery": "^2.1.2",
     "papaparse": "^4.6.2",
     "react": "^16.6.3",
@@ -27,5 +28,12 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "css-loader": "^1.0.1"
+  }
 }
