--- a/react/neworder/package.json
+++ b/react/neworder/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "draggabilly": "^2.2.0",
+    "node-sass": "^4.10.0",
     "packery": "^2.1.2",
     "papaparse": "^4.6.2",
     "react": "^16.6.3",
