--- a/react/neworder/package.json
+++ b/react/neworder/package.json
@@ -1,24 +1,56 @@
 {
-  "name": "neworder",
+  "name": "go-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
-    "draggabilly": "^2.2.0",
-    "node-sass": "^4.10.0",
     "packery": "^2.1.2",
     "papaparse": "^4.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
+    "react": "^16.7.0",
+    "react-dom": "^16.7.0",
     "react-packery-component": "^1.0.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
+    "test": "jest",
     "eject": "react-scripts eject"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "\\.(jpg|jpeg|png|gif|eot|otf|webp|svg|ttf|woff|woff2|mp4|webm|wav|mp3|m4a|aac|oga)$": "<rootDir>/__mocks__/fileMock.js",
+      "\\.(css|scss)$": "identity-obj-proxy"
+    }
+  },
+  "babel": {
+    "presets": [
+      [
+        "@babel/env",
+        {
+          "modules": false
+        }
+      ],
+      "@babel/react"
+    ],
+    "env": {
+      "test": {
+        "presets": [
+          [
+            "@babel/env"
+          ],
+          "@babel/react"
+        ],
+        "plugins": [
+          [
+            "@babel/plugin-proposal-class-properties",
+            {
+              "loose": false
+            }
+          ]
+        ]
+      }
+    }
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -29,9 +61,22 @@
     "not ie <= 11",
     "not op_mini all"
   ],
-  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
-  "main": "index.js",
-  "devDependencies": {},
-  "author": "",
-  "license": "ISC"
+  "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.2.3",
+    "@babel/preset-env": "^7.2.3",
+    "@babel/preset-react": "^7.0.0",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
+    "bootstrap": "^4.1.3",
+    "draggabilly": "^2.2.0",
+    "enzyme": "^3.8.0",
+    "enzyme-adapter-react-16": "^1.7.1",
+    "enzyme-to-json": "^3.3.5",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^23.6.0",
+    "node-sass": "^4.10.0",
+    "regenerator-runtime": "^0.13.1",
+    "react-test-renderer": "^16.7.0"
+  }
 }
