--- a/react/neworder/package.json
+++ b/react/neworder/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.2.1",
     "draggabilly": "^2.2.0",
     "packery": "^2.1.2",
     "papaparse": "^4.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
     "react-packery-component": "^1.0.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.3",
     "reactstrap": "^6.5.0"
   },
   "scripts": {
