--- a/react/neworder/package.json
+++ b/react/neworder/package.json
@@ -5,10 +5,15 @@
   "dependencies": {
     "bootstrap": "^4.2.1",
     "draggabilly": "^2.2.0",
+    "jquery": "^3.3.1",
+    "naive-react-packery-component": "0.0.2",
     "packery": "^2.1.2",
     "papaparse": "^4.6.2",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-draggable": "^3.1.1",
+    "react-grid-layout": "^0.16.6",
+    "react-masonry-component": "^6.2.1",
     "react-packery-component": "^1.0.2",
     "react-scripts": "^2.1.3",
     "reactstrap": "^6.5.0"
